[package]
name = "stock-analyzer"
version = "0.1.0"
authors = ["Alexander Montgomery <evaderxander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.23"
alpaca-client = "0.1.2"
rust_decimal = "1.8.1"
[dependencies.iron]
version = "*"